# Pixel-Grid-Inspector-

./: README.md  README.zh-CN.md
docs/: index.html
python-app/: README.md  pyproject.toml
python-app/app/: main.py
python-app/app/algorithms/: __init__.py  grid_detector.py
python-app/app/api/: routes.py
python-app/app/schemas/: detection.py
python-app/app/services/: detection_service.py
python-app/app/web/: index.html
python-app/app/web/assets/: app.js  styles.css
site-static/: README.md
site-static/assets/: app.js
